2004-05-02  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: GETTEXT_PACKAGE=${PACKAGE}-${LIBEXIF_CURRENT}
	  on request of Ilya Konstantinov <future@shiny.co.il>
	  (Debian needs it).

2004-05-02  Lutz Mueller <lutz@users.sourceforge.net>

	* libjpeg/jpeg-marker.h: No implicit enum declaration. Seen by
	  Antonio Scuri <scuri@tecgraf.puc-rio.br>.

2004-04-04  Lutz Mueller lutz@users.sourceforge.net

	* libexif/exif-data.c: If we don't know a tag we are going to parse,
	  stop loading. This should fix bug #138238.

2004-04-02  Jan Patera <patera@users.sourceforge.net>

	* libexif/pentax/exif-mnote-data-pentax.c: correct search for values
 
2004-03-19 Joerg Hoh <hohjg@users.sourceforge.net>
        * libexif/olympus/exif-mnote-data-olympus.c: code 
	  simplification

2004-03-16  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/pentax/exif-mnote-data-pentax.c: Another suggestion by
	  Joerg Hoh <joerg@devone.org>.

2004-03-15  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/pentax/mnote-pentax-entry.c: Joerg Hoh <joerg@devone.org>
	  did it again.

2004-03-03  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Patch by Joerg Hoh <joerg@devone.org>,
	  enhanced by myself.

2004-03-03  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c: C-compilability & fix of the 2004/03/02 code

2004-03-02  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: No version on GETTEXT_PACKAGE. Requested by
	  gernot@bigpond.com.
	* libexif/exif-entry.c: Some formatting.

2004-03-02  Joerg Hoh<joerg@devone.org>

	* libexif/exif-entry.c: moved redundant code into a static structure

2004-03-01  Jan Patera <patera@users.sourceforge.net>

	* libexif/pentax/exif-mnote-data-pentax.c: Fixed flipped inequation
	  causing all value requests to be denied as invalid

2004-02-02  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-loader.c: propper skipping of JPEG_MARKER_COM when
	  searching for JPEG_MARKER_APP1 with exif data
